checkstyle and warnings are done (readme left to add)